{
    "name": "MainController",
    "maps": [
        {
            "name": "MainMap",
            "id": "4cffd4d3-77ae-4415-b8d2-aa0170ec14a9",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "6c8c25aa-aca7-4df5-a60c-ffb098c82e0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "7fce52e8-334c-4cbb-9a49-3c035714759c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2),Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4a548457-04b6-459d-8f4a-3e2f54664f24",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eab16bc7-e53e-446f-97f6-d0f956a19463",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e3c217a-0ff3-4ae8-8936-315cde6378ce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46ddb6ad-a1c5-491c-9de7-6a566bc60065",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}